fix bug scrolling on iphone

--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@
 html, body {
     font-family: 'PlusJakartaSansRegular', Helvetica, Arial, sans-serif;
     overflow-y: hidden;
-    position: relative;
     background-image: url(../images/bg.png);
     background-position: top center;
     background-repeat: no-repeat;
+    touch-action: none;
+    -ms-touch-action: none;
 }
 
 .container {
